--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@
             
         </nav>
     </section>
+
     <section class="sub-header"> 
         <h1>About RAX</h1>
     </section> 
-
     <!-- about us content -->
     <section class="about-us">
         <div class="row">
@@ -49,29 +49,30 @@
         </div>
     </section>
 
+    <!-- Thing that changes is mobile vertical and desktop horizontal.Change row -->
     <section class="our-hosts">
         <div class = "row">
-            <div class="host-col">
+            <div class="host-col-abt">
                 <img src="images/122167498-man-portrait-young-happy-man-with-smiling-face-male-model-in-crossed-arms-pose-grey-background-guy-i.jpg">
                 <h4>Marie Appleseed</h3>
                 <p>Head of RAX</p>
                 <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
             </div>
-            <div class="host-col">
+            <div class="host-col-abt">
                 <img src="images/122167498-man-portrait-young-happy-man-with-smiling-face-male-model-in-crossed-arms-pose-grey-background-guy-i.jpg">
                 <h4>Johnny Appleseed</h3>
                     <p>Job Description</p>
                     <p>June 19th 3:00pm</p>
                     <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
             </div>
-            <div class="host-col">
+            <div class="host-col-abt">
                 <img src="images/122167498-man-portrait-young-happy-man-with-smiling-face-male-model-in-crossed-arms-pose-grey-background-guy-i.jpg">
                 <h4>Johnny Appleseed</h3>
                     <p>Job Description</p>
                     <p>June 19th 3:00pm</p>
                     <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
             </div>
-            <div class="host-col">
+            <div class="host-col-abt">
                 <img src="images/122167498-man-portrait-young-happy-man-with-smiling-face-male-model-in-crossed-arms-pose-grey-background-guy-i.jpg">
                 <h4>Johnny Appleseed</h3>
                     <p>Job Description</p>
