--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     </section>
 
     <!-- Our Hosts -->
-    <section class="our-hosts">
+    <!-- For desktop, horizontal and for mobile horizontal as well -->
+    <section class="featured-speakers-home">
         <h1>FEATURED SPEAKERS</h1>
         <div class = "row">
             <div class="host-col">
@@ -99,7 +100,8 @@
    
     <!-- Footer -->
     <section class="footer">
-        <p>© Copyright 2022 Ridgewood High School Alumni Association <br>Website developed by <i class = "fa fa-star"></i> Audrey Shin <i class = "fa fa-star"></i> RHS class of 2022</p>
+        <p>© Copyright 2022 Ridgewood High School Alumni Association </p>
+        <p>Website developed by <i class = "fa fa-star"></i> Audrey Shin <i class = "fa fa-star"></i> RHS class of 2022</p>
     </section>
 
 
