--- a/speakerList.html
+++ b/speakerList.html
@@ -39,28 +39,28 @@
     <!-- speaker list-->
     <section class="our-hosts">
         <div class = "row">
-            <div class="host-col">
+            <div class="host-col-abt">
                 <img src="hosts/jp.jpg" alt="">
                 <h4>Johnny Appleseed</h3>
                 <p>Job Description</p>
                 <p>June 19th 3:00pm</p>
                 <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
             </div>
-            <div class="host-col">
+            <div class="host-col-abt">
                 <img src="hosts/columbia.jpg" alt="">
                 <h4>Johnny Appleseed</h3>
                     <p>Job Description</p>
                     <p>June 19th 3:00pm</p>
                     <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
             </div>
-            <div class="host-col">
+            <div class="host-col-abt">
                 <img src="hosts/nba.jpg" alt="">
                 <h4>Johnny Appleseed</h3>
                     <p>Job Description</p>
                     <p>June 19th 3:00pm</p>
                     <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
             </div>
-            <div class="host-col">
+            <div class="host-col-abt">
                 <img src="hosts/snap.jpg" alt="">
                 <h4>Johnny Appleseed</h3>
                     <p>Job Description</p>
@@ -69,28 +69,28 @@
             </div>
         </div> 
         <div class = "row">
-            <div class="host-col">
+            <div class="host-col-abt">
                 <img src="hosts/jp.jpg" alt="">
                 <h4>Johnny Appleseed</h3>
                 <p>Job Description</p>
                 <p>June 19th 3:00pm</p>
                 <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
             </div>
-            <div class="host-col">
+            <div class="host-col-abt">
                 <img src="hosts/columbia.jpg" alt="">
                 <h4>Johnny Appleseed</h3>
                     <p>Job Description</p>
                     <p>June 19th 3:00pm</p>
                     <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
             </div>
-            <div class="host-col">
+            <div class="host-col-abt">
                 <img src="hosts/nba.jpg" alt="">
                 <h4>Johnny Appleseed</h3>
                     <p>Job Description</p>
                     <p>June 19th 3:00pm</p>
                     <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
             </div>
-            <div class="host-col">
+            <div class="host-col-abt">
                 <img src="hosts/snap.jpg" alt="">
                 <h4>Johnny Appleseed</h3>
                     <p>Job Description</p>
