--- a/about.html
+++ b/about.html
@@ -49,39 +49,61 @@
         </div>
     </section>
 
-    <!-- Thing that changes is mobile vertical and desktop horizontal.Change row -->
-    <section class="our-hosts">
-        <div class = "row">
-            <div class="host-col-abt">
-                <img src="images/122167498-man-portrait-young-happy-man-with-smiling-face-male-model-in-crossed-arms-pose-grey-background-guy-i.jpg">
-                <h4>Marie Appleseed</h3>
-                <p>Head of RAX</p>
-                <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
+
+    <!-- about us content -->
+    <section class="about-us">
+        <div class="row">
+            <div class="about-col">
+                <img src="images/studentswatching.jpg">
             </div>
-            <div class="host-col-abt">
-                <img src="images/122167498-man-portrait-young-happy-man-with-smiling-face-male-model-in-crossed-arms-pose-grey-background-guy-i.jpg">
-                <h4>Johnny Appleseed</h3>
-                    <p>Job Description</p>
-                    <p>June 19th 3:00pm</p>
-                    <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
+            <div class="about-col">
+                <h1 style="text-align:right;">How RAX Began</h1>
+                <p style="text-align:right;">RAX began as an original idea discussed between Dr. Gorman, Bill McCabe, and Tim Monahan.
+                    Extensive research of mentorship/externship programs at similar high schools (and small colleges) was done, prior to the creation of the program. 
+                    RAX eventually began incorporated into the RHSAA as part of the Career Committee in 2020 
+                    with the help of members Jamie Cariddi,  Jason D’Angelo, Alex Miller, and Fiona Goldberg- Rosenholz.
+                    </p>
             </div>
-            <div class="host-col-abt">
-                <img src="images/122167498-man-portrait-young-happy-man-with-smiling-face-male-model-in-crossed-arms-pose-grey-background-guy-i.jpg">
-                <h4>Johnny Appleseed</h3>
-                    <p>Job Description</p>
-                    <p>June 19th 3:00pm</p>
-                    <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
-            </div>
-            <div class="host-col-abt">
-                <img src="images/122167498-man-portrait-young-happy-man-with-smiling-face-male-model-in-crossed-arms-pose-grey-background-guy-i.jpg">
-                <h4>Johnny Appleseed</h3>
-                    <p>Job Description</p>
-                    <p>June 19th 3:00pm</p>
-                    <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
-            </div>
-        </div> 
+
+        </div>
     </section>
 
+
+        <!-- Thing that changes is mobile vertical and desktop horizontal.Change row -->
+        <section class="our-hosts">
+            <div class = "row">
+                <div class="host-col-abt">
+                    <img src="images/122167498-man-portrait-young-happy-man-with-smiling-face-male-model-in-crossed-arms-pose-grey-background-guy-i.jpg">
+                    <h4>Marie Appleseed</h3>
+                    <p>Head of RAX</p>
+                    <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
+                </div>
+                <div class="host-col-abt">
+                    <img src="images/122167498-man-portrait-young-happy-man-with-smiling-face-male-model-in-crossed-arms-pose-grey-background-guy-i.jpg">
+                    <h4>Johnny Appleseed</h3>
+                        <p>Job Description</p>
+                        <p>June 19th 3:00pm</p>
+                        <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
+                </div>
+                <div class="host-col-abt">
+                    <img src="images/122167498-man-portrait-young-happy-man-with-smiling-face-male-model-in-crossed-arms-pose-grey-background-guy-i.jpg">
+                    <h4>Johnny Appleseed</h3>
+                        <p>Job Description</p>
+                        <p>June 19th 3:00pm</p>
+                        <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
+                </div>
+                <div class="host-col-abt">
+                    <img src="images/122167498-man-portrait-young-happy-man-with-smiling-face-male-model-in-crossed-arms-pose-grey-background-guy-i.jpg">
+                    <h4>Johnny Appleseed</h3>
+                        <p>Job Description</p>
+                        <p>June 19th 3:00pm</p>
+                        <i class="fa fa-linkedin" style="font-size:25px;color:maroon"></i>
+                </div>
+            </div> 
+        </section>
+
+       <!-- about us content -->
+    
 
    
     <!-- Footer -->
