--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <section class = "headhead" id="headHead">
         <nav>
             <a href="index.html"><img src = "images/finalLogo.png"></a>
-            <!-- tag defines a devision or section in HTML doc -->
+            <!-- tag defines a devision or section in HTML do|c -->
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
