--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <section class="about-us">
         <div class="row">
             <div class="about-col">
-                <h1>Career Exploration</h1>
+                <h1>Career Exploration!</h1>
                 <p>Timothy monahan etc. etc. etc. explain how RAX came about. Lorem ipsum dolor sit amet. Id quia repudiandae id cumque numquam ad minus adipisci aut animi internos. Sit vero accusantium quo totam nisi sit molestiae sequi eum sint soluta et dolorem adipisci aut fuga assumenda non repellat error. Est voluptas asperiores ea sequi perspiciatis id quia dolor cum architecto itaque in libero sunt eos quisquam error! Ut libero necessitatibus qui odit aliquam qui assumenda error ut molestias perspiciatis ut eligendi tempora.</p>
             </div>
             <div class="about-col">
