--- a/hosts.html
+++ b/hosts.html
@@ -40,8 +40,12 @@
     <section class="about-us">
         <div class="row">
             <div class="about-col">
-                <h1>Career Exploration</h1>
-                <p>Timothy monahan etc. etc. etc. explain how RAX came about. Lorem ipsum dolor sit amet. Id quia repudiandae id cumque numquam ad minus adipisci aut animi internos. Sit vero accusantium quo totam nisi sit molestiae sequi eum sint soluta et dolorem adipisci aut fuga assumenda non repellat error. Est voluptas asperiores ea sequi perspiciatis id quia dolor cum architecto itaque in libero sunt eos quisquam error! Ut libero necessitatibus qui odit aliquam qui assumenda error ut molestias perspiciatis ut eligendi tempora.</p>
+                <h1>Host Blurb</h1>
+                <p>Be a part of cultivating RHS’s Tradition of Excellence! 
+                    RHS Alumni Externship (RAX) engages alumni by allowing them to virtually host a group of current RHS students and walk them through their career and life journey from RHS to now. Both hosts and current students participate in a symbiotic learning experience with hosts learning about the interests and perspectives of a new generation. 
+                    Give back to Ridgewood High School by providing insights to the next generation!
+                    Sign up now for our 2022 session here!
+                    </p>
                 <a href="" class="hero-btn top-btn">Apply Now</a>
                 <a href="previousAlumni.html" class="hero-btn top-btn">Previous Hosts</a>
             </div>
