--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
     <section class="about-us">
         <div class="row">
             <div class="about-col">
-                <h1>Career Exploration!</h1>
-                <p>Timothy monahan etc. etc. etc. explain how RAX came about. Lorem ipsum dolor sit amet. Id quia repudiandae id cumque numquam ad minus adipisci aut animi internos. Sit vero accusantium quo totam nisi sit molestiae sequi eum sint soluta et dolorem adipisci aut fuga assumenda non repellat error. Est voluptas asperiores ea sequi perspiciatis id quia dolor cum architecto itaque in libero sunt eos quisquam error! Ut libero necessitatibus qui odit aliquam qui assumenda error ut molestias perspiciatis ut eligendi tempora.</p>
+                <h1>Career Exploration</h1>
+                <p>The RHS Alumni Externship (RAX) program is an opportunity for current RHS juniors and seniors to meet, receive mentorship from, and network with alumni (and parents) from a variety of career backgrounds. RAX session hosts will share a day/week in the life of their job, discuss how they navigated from high school/college to their career, and allow time for interactive Q&A. RAX sessions are open to all RHS juniors/seniors</p>
             </div>
             <div class="about-col">
                 <img src="images/city.png">
