--- a/hosts.html
+++ b/hosts.html
@@ -23,6 +23,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="speakerList.html">SESSIONS</a></li>
                     <li><a href="students.html">FOR STUDENTS</a></li>
                     <li><a href="hosts.html">FOR HOSTS</a></li>
                     <a href="mailto:haeeun1227@gmail.com"class="hero-btn red-btn">CONTACT</a>
@@ -40,7 +41,7 @@
     <section class="about-us">
         <div class="row">
             <div class="about-col">
-                <h1>Host Blurb</h1>
+                <h1>Become a Host</h1>
                 <p>Be a part of cultivating RHS’s Tradition of Excellence! 
                     RHS Alumni Externship (RAX) engages alumni by allowing them to virtually host a group of current RHS students and walk them through their career and life journey from RHS to now. Both hosts and current students participate in a symbiotic learning experience with hosts learning about the interests and perspectives of a new generation. 
                     Give back to Ridgewood High School by providing insights to the next generation!
