--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="speakerList.html">SESSIONS</a></li>
                     <li><a href="students.html">FOR STUDENTS</a></li>
                     <li><a href="hosts.html">FOR HOSTS</a></li>
                     <a href="mailto:haeeun1227@gmail.com"class="hero-btn red-btn">CONTACT</a>
