--- a/index.html
+++ b/index.html
@@ -83,21 +83,23 @@
     <section class="featured-speakers-home">
         <h1>FEATURED SPEAKERS</h1>
         <div class = "row">
-            <div class="host-col">
-                <img src="hosts/jp.jpg" alt="">
+            <div class="comp-col">
+                <img src="companies/cornellLogo.png" alt="">
             </div>
-            <div class="host-col">
-                <img src="hosts/columbia.jpg" alt="">
+            <div class="comp-col">
+                <img src="companies/valorant3.jpg" alt="">
             </div>
-            <div class="host-col">
-                <img src="hosts/nba.jpg" alt="">
+            <div class="comp-col">
+                <img src="companies/mlb.png" alt="">
             </div>
-            <div class="host-col">
-                <img src="hosts/snap.jpg" alt="">
+            <div class="comp-col">
+                <img src="companies/columbia.jpeg" alt="">
             </div>
         </div> 
+
     </div>
     </section>
+
    
     <!-- Footer -->
     <section class="footer">
