--- a/index.html
+++ b/index.html
@@ -97,6 +97,22 @@
             </div>
         </div> 
 
+        <div class = "row">
+            <div class="comp-col">
+                <img src="companies/navy.png" alt="">
+            </div>
+            <div class="comp-col">
+                <img src="companies/amazon2.png" alt="">
+            </div>
+            <div class="comp-col">
+                <img src="companies/memorial.png" alt="">
+            </div>
+            <div class="comp-col">
+                <img src="companies/snap4.png" alt="">
+            </div>
+        </div> 
+
+
     </div>
     </section>
 
