--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <!-- Our Hosts -->
     <!-- For desktop, horizontal and for mobile horizontal as well -->
-    <section class="featured-speakers-home">
+    <!--<section class="featured-speakers-home">
         <h1>FEATURED SPEAKERS</h1>
         <div class = "row">
             <div class="comp-col">
@@ -115,7 +115,7 @@
 
     </div>
     </section>
-
+-->
    
     <!-- Footer -->
     <section class="footer">
