--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 <a href="speakerList.html"class="hero-btn red-btn">Speakers</a>
             </div>
             <div class = "col">
-                <h3>RAX Sessions</h3>
-                <p>Browse all the 2022 Externship Sessions<br>(Dates & Times  Now Confirmed)</p>
-                <a href=""class="hero-btn red-btn">Times</a>
+                <h3>Testimonials</h3>
+                <p>Hear from previous students <br>on their RAX experience</p>
+                <a href="testimonials.html"class="hero-btn red-btn">Testimonials</a>
             </div>
         </div>
     </section>
