--- a/students.html
+++ b/students.html
@@ -46,7 +46,7 @@
 
                     If you have class/classes during your assigned session, you will be excused from that class (Field Trip) as long as you attend your session. If you sign-up for a session that meets on a date/time you are scheduled to be in an RHS classroom, you might need to relocate and use earbuds for the session.
                     We hope you enjoy these sessions, gain valuable advice, and make some new connections! </p>
-                <a href="https://www.rhsalumniassociation.org/rhs-externship-student.php" class="hero-btn top-btn">Apply Now</a>
+                <a href="https://forms.gle/716uUVWWQj81wpKw7" class="hero-btn top-btn">Apply Now</a>
             </div>
             <div class="about-col">
                 <img src="images/student.png">
