--- a/testimonials.html
+++ b/testimonials.html
@@ -35,7 +35,7 @@
     </section>
 
     <section class="sub-header"> 
-        <h1>Testimonials</h1>
+        <h1>Student Testimonials</h1>
        
     </section> 
 
