--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="header"> 
     <div class="text-box">
         <h1>RHS Alumni Externship Program</h1>
-        <p>The RHS Alumni Externship or RAX program is an opportunity for current RHS juniors and seniors to meet, receive mentorship from, and network with alumni and parents from a variety of career backgrounds. Sessions will be virtual and take place between May 17 and June 15 2022. RAX session hosts will share a day in the life of their job, discuss how they navigated from high school, college to their career, and allow time for interactive Q&A. RAX sessions are open to all RHS juniors and seniors. Students are required to apply in April. 
+        <p>The RHS Alumni Externship or RAX program is an opportunity for current RHS juniors and seniors to meet, receive mentorship from, and network with alumni and parents from a variety of career backgrounds. Sessions will be virtual and take place between May 17 and June 15 2022. RAX session hosts will share a day in the life of their job, discuss how they navigated from high school, college to their career, and allow time for interactive Q&A. RAX sessions are open to all RHS juniors and seniors. Students are required to sign-up on their top three choices. 
         </p> 
         <!-- The anchor tag will be a button -->
     </div>
@@ -120,7 +120,7 @@
     <!-- Footer -->
     <section class="footer">
         <p>© Copyright 2022 Ridgewood High School Alumni Association </p>
-        <p>Website developed by <i class = "fa fa-star"></i> Audrey Shin <i class = "fa fa-star"></i> RHS class of 2022</p>
+        <p>Website developed by <i class = "fa fa-star"></i> Audrey Shin<i class = "fa fa-star"></i> RHS class of 2022</p>
     </section>
 
 
